--- a/docs/package.json
+++ b/docs/package.json
@@ -1,9 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "npx nuxt dev",
-    "generate": "npx nuxt generate",
-    "now-build": "yarn generate"
+    "dev": "nuxt dev",
+    "build": "nuxt generate"
   },
   "devDependencies": {
     "docus": "0.5.6"
