--- a/docs/package.json
+++ b/docs/package.json
@@ -5,6 +5,7 @@
     "build": "nuxt generate"
   },
   "devDependencies": {
-    "docus": "0.5.6"
+    "docus": "0.5.6",
+    "nuxt-i18n": "6.27.0"
   }
 }
