--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -18,17 +18,17 @@
     "email": "daniel@roe.dev",
     "url": "https://github.com/danielroe"
   },
-  "main": "lib/index.js",
-  "module": "lib/index.es.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib/**/*",
+    "dist/**/*",
     "template/*",
     "!**/*.map"
   ],
   "scripts": {
-    "build": "yarn clean && yarn compile",
-    "clean": "rm -rf lib test/fixture/.nuxt test/fixture/dist",
+    "build": "npm run clean && npm run compile",
+    "clean": "rm -rf dist test/fixture/.nuxt test/fixture/dist",
     "compile": "siroc build",
     "dev": "nuxt test/fixture"
   },
@@ -37,6 +37,7 @@
     "upath": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "~7.12.17",
     "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
