--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "test": "pnpm run lint && jest && pnpm run -r test:types"
   },
   "devDependencies": {
-    "@babel/core": "7.17.4",
+    "@babel/core": "7.17.9",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@nuxtjs/eslint-config-typescript": "9.0.0",
     "@release-it/conventional-changelog": "^4.1.0",
-    "@types/jest": "27.4.0",
-    "@typescript-eslint/eslint-plugin": "5.12.0",
-    "@typescript-eslint/parser": "5.12.0",
+    "@types/jest": "27.4.1",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
     "conventional-changelog-conventionalcommits": "^4.6.3",
-    "eslint": "8.9.0",
+    "eslint": "8.14.0",
     "husky": "^7.0.4",
-    "jest": "27.5.1",
+    "jest": "28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
     "release-it": "^14.12.4",
     "release-it-yarn-workspaces": "^2.0.1",
     "semver": "^7.3.5",
     "siroc": "^0.16.0",
-    "typescript": "4.5.5"
+    "typescript": "4.6.4"
   }
 }
