--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "siroc build",
+    "build": "pnpm -r build",
     "lint": "eslint --ext .ts,.tsx,.js .",
     "lint:fix": "npm run lint -- --fix",
     "postinstall": "husky install",
@@ -31,7 +31,7 @@
     "release-it": "^14.14.2",
     "release-it-yarn-workspaces": "^2.0.1",
     "semver": "^7.3.7",
-    "siroc": "^0.16.0",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "unbuild": "^0.7.4"
   }
 }
