--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -27,9 +27,7 @@
     "!**/*.map"
   ],
   "scripts": {
-    "build": "npm run clean && npm run compile",
-    "clean": "rm -rf dist test/fixture/.nuxt test/fixture/dist",
-    "compile": "siroc build",
+    "build": "unbuild",
     "dev": "nuxt test/fixture"
   },
   "dependencies": {
