--- a/packages/typed-vuex/package.json
+++ b/packages/typed-vuex/package.json
@@ -37,7 +37,7 @@
     "vuex": "^3.6.2"
   },
   "peerDependencies": {
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2 || ^4.0.0"
   },
   "tsd": {
     "directory": "test/tsd",
