--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "test": "pnpm run lint && jest && pnpm run -r test:types"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
-    "@babel/plugin-transform-runtime": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@nuxtjs/eslint-config-typescript": "10.0.0",
-    "@release-it/conventional-changelog": "^4.0.0",
-    "@types/jest": "28.1.1",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@babel/core": "7.19.3",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@nuxtjs/eslint-config-typescript": "11.0.0",
+    "@release-it-plugins/workspaces": "^3.0.0",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@types/jest": "29.1.2",
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "@typescript-eslint/parser": "5.40.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "eslint": "8.17.0",
+    "eslint": "8.25.0",
     "husky": "^8.0.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
-    "release-it": "^14.0.0",
-    "release-it-yarn-workspaces": "^2.0.1",
-    "semver": "^7.3.7",
-    "typescript": "4.7.3",
-    "unbuild": "^0.7.4"
+    "jest": "29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
+    "node-fetch": "2.6.7",
+    "release-it": "^15.5.0",
+    "semver": "^7.3.8",
+    "typescript": "4.8.4",
+    "unbuild": "^0.8.11"
   },
   "packageManager": "pnpm@7.12.2"
 }
