--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "typed-vuex": "0.3.1",
-    "upath": "^2.0.1"
+    "pathe": "^0.3.9"
   },
   "devDependencies": {
     "@babel/preset-env": "~7.19.4",
