--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,10 @@ jobs:
           cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Add nuxt
-        run: pnpm i nuxt@${{ matrix.nuxt }}
+        run: pnpm i --shamefully-hoist nuxt@${{ matrix.nuxt }}
         working-directory: packages/nuxt-typed-vuex
 
       - name: Build
@@ -53,7 +53,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Build
         run: pnpm build
