--- a/package.json
+++ b/package.json
@@ -8,31 +8,35 @@
     "build": "pnpm -r build",
     "lint": "eslint --ext .ts,.tsx,.js .",
     "lint:fix": "npm run lint -- --fix",
-    "postinstall": "husky install",
+    "prepare": "simple-git-hooks",
     "test": "pnpm run lint && jest && pnpm run -r test:types"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
-    "@babel/plugin-transform-runtime": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
+    "@babel/core": "7.25.8",
+    "@babel/plugin-transform-runtime": "^7.25.7",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-typescript": "^7.25.7",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "@nuxtjs/eslint-config-typescript": "10.0.0",
-    "@release-it/conventional-changelog": "^4.0.0",
-    "@types/jest": "28.1.1",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@types/jest": "28.1.8",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "eslint": "8.17.0",
-    "husky": "^8.0.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
-    "release-it": "^14.0.0",
-    "release-it-yarn-workspaces": "^2.0.1",
-    "semver": "^7.3.7",
-    "typescript": "4.7.3",
-    "unbuild": "^0.7.4"
+    "eslint": "8.57.1",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "semver": "^7.6.3",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "4.9.5",
+    "unbuild": "^0.7.6"
   },
-  "packageManager": "pnpm@7.1.5"
+  "resolutions": {
+    "vue3": "npm:vue@latest"
+  },
+  "simple-git-hooks": {
+    "commit-msg": "npx commitlint --edit",
+    "pre-commit": "pnpm lint:fix"
+  },
+  "packageManager": "pnpm@9.12.2"
 }
