ci: run tests on last node LTS

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: lts/-1
           cache: "pnpm"
 
       - name: Install dependencies
